[package]
name = "immuxdb"
version = "0.1.0"
authors = ["Yiwang Network Technology Company, Limited"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
url = "1.7"
bson = "0.13"
rocksdb = "0.12.1"
serde_json = "1.0"
tiny_http = "0.6"

# chrono is introduced to construct date for bson.rs. See issue #34.
chrono = "0.4"

# sqlparser is introduced to parse sql statement, See issue #58
sqlparser = "0.3.0"

[dev-dependencies]
reqwest = "0.9"
csv = "1.1"
immuxdb_client = { path = "src/connectors/rust" }

[[bin]]
name = "immuxdb"
path = "src/bin/server.rs"

[lib]
name = "libimmuxdb"
path = "src/lib.rs"

[[bench]]
name = "realistic"
harness = false
path = "benches/realistic/mod.rs"

[workspace]
members = [
    "src/connectors/rust",
]

