[package]
name = "immuxdb"
version = "0.1.0"
authors = ["Yiwang Network Technology Company, Limited"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
url = "1.7"
bson = "0.13"
rocksdb = "0.12.1"
serde_json = "1.0"
tiny_http = "0.6"

# chrono is introduced to construct date for bson.rs. See issue #34.
chrono = "0.4"

# sqlparser is introduced to parse sql statement, See issue #58
sqlparser = "0.3.0"

[dev-dependencies]
reqwest = "0.9"
immuxdb_client = { path = "src/connectors/rust" }
immuxdb_dev_utils = { path = "src/dev" }
immuxdb_bench_utils = { path = "benches/immuxdb_bench_utils" }

[[bin]]
name = "immuxdb"
path = "src/bin/server.rs"

[lib]
name = "libimmuxdb"
path = "src/lib.rs"

[[bench]]
name = "census90"
harness = false
path = "benches/realistic/census90/census90.rs"

[[bench]]
name = "berka99"
harness = false
path = "benches/realistic/berka99/berka99.rs"

[[bench]]
name = "indexed_set"
harness = false
path = "benches/artificial/indexed_set.rs"

[[bench]]
name = "unindexed_set"
harness = false
path = "benches/artificial/unindexed_set.rs"

[[bench]]
name = "journal"
harness = false
path = "benches/artificial/journal.rs"

[workspace]
members = [
    "src/connectors/rust",
    "src/dev",
    "benches/immuxdb_bench_utils"
]

