[package]
name = "immuxdb_bench_utils"
version = "0.1.0"
authors = ["Yiwang Network Technology Company, Limited"]
edition = "2018"

[lib]
name = "immuxdb_bench_utils"
path = "mod.rs"

[dependencies]
immuxdb_dev_utils = { path = "../../src/dev" }
immuxdb_client = { path = "../../src/connectors/rust" }
immuxdb = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
